<resources>
    <string name="app_name">AndroidLoanCalculator</string>
    <string name="loanTermLabel">Loan Term Years</string>
    <string name="loanTermPlaceHolder">5</string>
    <string name="interestRateLabel">Interest Rate %</string>
    <string name="interestRatePlaceHolder">3</string>
    <string name="monthlyPaymentLabel">Monthly Payment</string>
    <string name="loanAndInterestPaidLabel">Loan and Interest</string>
    <string name="totalInterestPaidLabel">Total Interest Paid</string>

    <string name="placeholderzero">0.00</string>

</resources>
