<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/billclinton">
    <!--start of loan amount-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        >

        <TextView
            android:id="@+id/usd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:gravity="center"
            android:text="$"
            />

        <EditText
            android:id="@+id/loanAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="40dp"
            android:text="10,000"
            android:backgroundTint="@android:color/transparent"/>

    </LinearLayout>
    <!--end of loan amount-->
    <!--start loan term -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/loanTermLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/loanTermLabel" />

            <EditText
                android:id="@+id/loanTermValueEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="@color/colorAccent"
                android:text="@string/loanTermPlaceHolder" />
        </LinearLayout>

    </LinearLayout>
    <!--end loan term-->
    <!--start interest rate-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/interestRateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/interestRateLabel" />

            <EditText
                android:id="@+id/interestRateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="@color/colorAccent"
                android:text="@string/interestRatePlaceHolder" />
        </LinearLayout>
    </LinearLayout>
    <!--end interest rate-->


    <Button
        android:id="@+id/calculateLoanBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addNums"
        android:text="Calculate" />


    <!--start monthly fee-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/monthlyPaymentTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/monthlyPaymentLabel" />

            <TextView
                android:id="@+id/monthlyPaymentValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="@color/colorAccent"
                android:text="@string/monthlyPaymentPlaceHolder" />
        </LinearLayout>
    </LinearLayout>
    <!--start monthly fee-->
</LinearLayout>